--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,17 +1,29 @@
-name: GitHub Actions Demo
-on: [push]
+name: Build and deploy frontend
+on:
+  push:
+    branches: [ feat/homescreen ]
+  pull_request:
+    branches: [ feat/homescreen ]
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: yarn ci
+    - run: yarn compile
+    - run: yarn build
+
+  # - name: Deploy to Skynet
+  #       uses: SkynetLabs/deploy-to-skynet-action@v2
+  #       with:
+  #         upload-dir: build
+  #         github-token: ${{ secrets.GITHUB_TOKEN }}
+  #         registry-seed: ${{ secrets.REGISTRY_SEED || '' }}
+  #         registry-datakey: ${{ secrets.REGISTRY_DATAKEY || '' }}
