--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,10 +20,10 @@ jobs:
     - run: yarn compile
     - run: yarn build
 
-  # - name: Deploy to Skynet
-  #       uses: SkynetLabs/deploy-to-skynet-action@v2
-  #       with:
-  #         upload-dir: build
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
-  #         registry-seed: ${{ secrets.REGISTRY_SEED || '' }}
-  #         registry-datakey: ${{ secrets.REGISTRY_DATAKEY || '' }}
+  - name: Deploy to Skynet
+        uses: SkynetLabs/deploy-to-skynet-action@v2
+        with:
+          upload-dir: build
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          registry-seed: ${{ secrets.REGISTRY_SEED || '' }}
+          registry-datakey: ${{ secrets.REGISTRY_DATAKEY || '' }}
