--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,6 +19,7 @@ jobs:
     - run: yarn
     - run: yarn compile
     - run: yarn build
+    - run: yarn test
     - name: Deploy to Skynet
       uses: SkynetLabs/deploy-to-skynet-action@v2
       with:
